--- a/gen-ai-use-cases.ipynb
+++ b/gen-ai-use-cases.ipynb
@@ -846,13 +846,99 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bdafa63f-3c5f-41f7-b592-f239c0e0f350",
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "f8fe76db-9df6-4282-bad5-8be598933a79",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "Answering an closed domain question"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "232c956f-3971-415e-ba2b-a9fa2fd92293",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Prompt]\n",
+      "Answer the question given in the contex below:\n",
+      "Context: \n",
+      "Storage and content policy \n",
+      "\n",
+      "How durable is my data in Cloud Storage? \n",
+      "\n",
+      "Cloud Storage is designed for 99.999999999% (11 9's) annual durability, which is appropriate for even primary storage and\n",
+      "business-critical applications. This high durability level is achieved through erasure coding that stores data pieces redundantly\n",
+      "across multiple devices located in multiple availability zones.\n",
+      "Objects written to Cloud Storage must be redundantly stored in at least two different availability zones before the\n",
+      "write is acknowledged as successful. Checksums are stored and regularly revalidated to proactively verify that the data\n",
+      "integrity of all data at rest as well as to detect corruption of data in transit. If required, corrections are automatically\n",
+      "made using redundant data. Customers can optionally enable object versioning to add protection against accidental deletion.\n",
+      "?\n",
+      "\n",
+      "Question: How is high availability achieved? \n",
+      "\n",
+      "Answer:\n",
+      "\n",
+      "[Response]\n",
+      "## High Availability in Cloud Storage\n",
+      "\n",
+      "Cloud Storage achieves high availability through a combination of redundancy and proactive measures:\n",
+      "\n",
+      "**Redundancy:**\n",
+      "\n",
+      "* **Erasure coding:** Data is split into pieces and stored redundantly across multiple devices in different availability zones. This ensures that even if some devices fail, the data remains accessible.\n",
+      "* **Object versioning:** This optional feature allows you to keep multiple versions of your objects, protecting against accidental deletion or modification.\n",
+      "\n",
+      "**Proactive measures:**\n",
+      "\n",
+      "* **Checksums:** These are used to verify the integrity of data at rest and in transit. Any corruption is automatically detected and corrected using the redundant data.\n",
+      "* **Regular revalidation:** Checksums are regularly revalidated to ensure data integrity is maintained over time.\n",
+      "\n",
+      "**Additional factors:**\n",
+      "\n",
+      "* **Multiple availability zones:** Data is stored across multiple geographically dispersed availability zones, minimizing the impact of localized outages.\n",
+      "* **Automatic failover:** In case of a device failure, the system automatically reroutes requests to healthy devices, ensuring continuous availability.\n",
+      "\n",
+      "These measures work together to ensure that your data is highly available and accessible even in the event of hardware failures, network disruptions, or other unexpected events. \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "context = \"\"\"\n",
+    "Storage and content policy \\n\n",
+    "How durable is my data in Cloud Storage? \\n\n",
+    "Cloud Storage is designed for 99.999999999% (11 9's) annual durability, which is appropriate for even primary storage and\n",
+    "business-critical applications. This high durability level is achieved through erasure coding that stores data pieces redundantly\n",
+    "across multiple devices located in multiple availability zones.\n",
+    "Objects written to Cloud Storage must be redundantly stored in at least two different availability zones before the\n",
+    "write is acknowledged as successful. Checksums are stored and regularly revalidated to proactively verify that the data\n",
+    "integrity of all data at rest as well as to detect corruption of data in transit. If required, corrections are automatically\n",
+    "made using redundant data. Customers can optionally enable object versioning to add protection against accidental deletion.\n",
+    "\"\"\"\n",
+    "\n",
+    "question = \"How is high availability achieved?\"\n",
+    "\n",
+    "prompt = f\"\"\"Answer the question given in the contex below:\n",
+    "Context: {context}?\\n\n",
+    "Question: {question} \\n\n",
+    "Answer:\n",
+    "\"\"\"\n",
+    "\n",
+    "print(\"[Prompt]\")\n",
+    "print(prompt)\n",
+    "\n",
+    "print(\"[Response]\")\n",
+    "response = model.generate_content(contents=prompt, generation_config=predictable_gen_config)\n",
+    "print(response.text)"
    ]
   }
  ],
