--- a/text_prompt_design_challenge_lab-v1.0.0.ipynb
+++ b/text_prompt_design_challenge_lab-v1.0.0.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {
     "id": "zsjp39ZWK27D",
     "tags": []
@@ -411,6 +411,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "## Bangalore: A Cyclist's Delight\n",
+      "\n",
+      "Bangalore, with its pleasant weather and numerous parks, is a haven for cyclists. Here are some places where you can enjoy a scenic bike ride:\n",
+      "\n",
+      "**Parks:**\n",
+      "\n",
+      "* **Cubbon Park:** This expansive green lung in the heart of the city is perfect for a leisurely cycling session. With dedicated cycling tracks and a variety of terrains, it caters to cyclists of all levels.\n",
+      "* **Lalbagh Botanical Garden:** Explore the diverse flora of this beautiful garden on two wheels. You can cycle through the serene avenues, past historical monuments, and even rent a bicycle on-site.\n",
+      "* **Bannerghatta National Park:** For nature enthusiasts, Bannerghatta offers a unique cycling experience. You can explore the park's periphery on designated trails, spotting deer, bison, and other wildlife.\n",
+      "\n",
+      "**Trails:**\n",
+      "\n",
+      "* **Nandi Hills Cycling Trail:** This challenging yet rewarding trail takes you through scenic hills and offers breathtaking views of the surrounding landscape.\n",
+      "* **Bellandur Lake Trail:** This lakeside trail offers a picturesque ride with a mix of paved and unpaved paths.\n",
+      "* **Basavanagudi-Jayanagar Trail:** This urban trail winds through the charming neighborhoods of Basavanagudi and Jayanagar, showcasing the city's heritage and vibrant culture.\n",
+      "\n",
+      "**Other options:**\n",
+      "\n",
+      "* **Rent a bike:** Several bike rental companies operate in Bangalore, offering a variety of cycles to choose from.\n",
+      "* **Join a cycling group:** Many cycling groups organize regular rides in the city, providing a great way to connect with fellow enthusiasts and explore new routes.\n",
+      "* **Book a guided cycling tour:** Several companies offer guided tours that take you to the city's hidden gems and provide insights into its history and culture.\n",
+      "\n",
+      "**Additional Tips:**\n",
+      "\n",
+      "* Before embarking on your cycling adventure, check the weather conditions and pack accordingly.\n",
+      "* Wear a helmet and other safety gear.\n",
+      "* Be aware of your surroundings and ride responsibly.\n",
+      "* Enjoy the ride and soak in the beauty of Bangalore!\n",
+      "\n",
       "\n"
      ]
     }
@@ -439,7 +468,7 @@
     "    Bangalore\n",
     "    </INPUT CITY>\"\"\"\n",
     "response = generative_model.generate_content(prompt)\n",
-    "print_response(prompt)"
+    "print(response.text)"
    ]
   },
   {
