--- a/Vertex AI Agent Builder Data Store Status Checker.ipynb
+++ b/Vertex AI Agent Builder Data Store Status Checker.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "1a520dd0-ccd3-4344-8bd6-a7fdddeeb3a6",
    "metadata": {
     "tags": []
@@ -280,7 +280,7 @@
        "}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "id": "ba90152b-2297-4f36-b350-d81392def5bf",
    "metadata": {
     "tags": []
@@ -339,23 +339,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "4cbb1ed3-128f-40a1-b42f-09e52321d121",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'url' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m urls \u001b[38;5;241m=\u001b[39m \u001b[43mlist_indexed_urls\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdocs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdocs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m urls[\u001b[38;5;241m0\u001b[39m]\n",
-      "Cell \u001b[0;32mIn[13], line 67\u001b[0m, in \u001b[0;36mlist_indexed_urls\u001b[0;34m(docs, project_id, location, datastore_id)\u001b[0m\n\u001b[1;32m     64\u001b[0m     docs \u001b[38;5;241m=\u001b[39m list_documents(project_id, location, datastore_id)\n\u001b[1;32m     65\u001b[0m urls \u001b[38;5;241m=\u001b[39m [doc\u001b[38;5;241m.\u001b[39mcontent\u001b[38;5;241m.\u001b[39muri \u001b[38;5;28;01mfor\u001b[39;00m doc \u001b[38;5;129;01min\u001b[39;00m docs]\n\u001b[0;32m---> 67\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43murl\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'url' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/testing.html'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -364,12 +362,216 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a7058a7-60dd-4b89-b220-55522d96cdde",
+   "cell_type": "markdown",
+   "id": "02c61eaf-bb74-4d73-b53f-543f68c922f7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Search Indexed URLs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e8652543-40da-4c0a-9e01-6682385ee6c3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/testing.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/strategy.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/making-blood-components.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/making-your-donation.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/products.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/high-ferritin.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/forms.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/blood-for-transfusion.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/how-you-can-give-life.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/transplantation-immunogenetics-services.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/blood.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/prepare-and-aftercare.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/our-strategy.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/our-history.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/our-services.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/about.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/iron-deficiency.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/iron-health.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/donor-centre.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/fainting.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/reasons-for-a-transfusion.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/sexual-activity.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/learn-about-blood.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/avoid-a-transfusion.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/relax-when-giving-blood.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/our-research.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/milk-research.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/donating-after-travelling.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/trending-research.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/become-a-milk-donor.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/milk-donation-guide.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/serum-eyedrops.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/resources.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/training.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/resource-library.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/blood-types.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/milk.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/matching-blood-groups.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/parents.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/blood-stem-cell.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/anaemia.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/information-for-suppliers.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/news-and-stories.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/COVID-19-vaccine.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/faq.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/who-we-are.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/receiving-a-transfusion.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/why-donate-blood.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/donate-as-a-group.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/what-happens-to-your-blood.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/our-people.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/organ-and-tissue.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/inventory-management.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/plasma.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/featured-resources.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/types-of-transfusions.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/careers.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/partner-with-us.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/eligibility.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/index.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/red-cell-reference.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/privacy.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/know-the-risks.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/global-search-footer.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/program.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/learn.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/blood-testing-and-safety.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/patients.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/health-professionals.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/disclaimer.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/microbiome.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/clinical-practice.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/quiz.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/safety.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/coronavirus.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/start-quiz.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/meet-our-researchers.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/contact.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/platelets.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_url(urls, \"gs://cloud-samples-data/dialogflow-cx/arc-lifeblood\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7909d6a6-e228-4d5b-86a9-af49479435cf",
+   "metadata": {},
+   "source": [
+    "Run the below code in the notebook cell, and should have similar output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "0065ebc5-0111-4e32-8d01-16b8f000d492",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/testing.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/strategy.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/making-blood-components.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/making-your-donation.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/products.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/high-ferritin.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/forms.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/blood-for-transfusion.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/how-you-can-give-life.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/transplantation-immunogenetics-services.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/blood.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/prepare-and-aftercare.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/our-strategy.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/our-history.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/our-services.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/about.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/iron-deficiency.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/iron-health.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/donor-centre.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/fainting.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/reasons-for-a-transfusion.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/sexual-activity.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/learn-about-blood.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/avoid-a-transfusion.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/relax-when-giving-blood.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/our-research.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/milk-research.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/donating-after-travelling.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/trending-research.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/become-a-milk-donor.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/milk-donation-guide.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/serum-eyedrops.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/resources.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/training.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/resource-library.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/blood-types.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/milk.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/matching-blood-groups.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/parents.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/blood-stem-cell.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/anaemia.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/information-for-suppliers.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/news-and-stories.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/COVID-19-vaccine.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/faq.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/who-we-are.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/receiving-a-transfusion.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/why-donate-blood.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/donate-as-a-group.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/what-happens-to-your-blood.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/our-people.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/organ-and-tissue.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/inventory-management.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/plasma.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/featured-resources.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/types-of-transfusions.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/careers.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/partner-with-us.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/eligibility.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/index.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/red-cell-reference.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/privacy.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/know-the-risks.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/global-search-footer.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/program.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/learn.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/blood-testing-and-safety.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/patients.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/health-professionals.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/disclaimer.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/microbiome.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/clinical-practice.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/quiz.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/safety.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/coronavirus.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/start-quiz.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/meet-our-researchers.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/contact.html\n",
+      "gs://cloud-samples-data/dialogflow-cx/arc-lifeblood/platelets.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_url(urls, \"dialogflow-cx\")"
+   ]
   }
  ],
  "metadata": {
