--- a/Storing and Querying Embeddings with AlloyDB for PostgreSQL.ipynb
+++ b/Storing and Querying Embeddings with AlloyDB for PostgreSQL.ipynb
@@ -861,12 +861,346 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "742b1c7a-9e58-4f51-b8ff-bdefe57a7954",
+   "cell_type": "markdown",
+   "id": "f5c2d78d-9691-4fb9-9a0a-cf95a27c0d9a",
    "metadata": {},
+   "source": [
+    "4. Use LangChain to summarize and generate a high-quality prompt to answer the user query.\n",
+    "\n",
+    "After finding the similar products and their descriptions using pgvector, the next step is to use them for generating a prompt input for the LLM model. Since individual product descriptions can be very long, they may not fit within the specified input payload limit for an LLM model. The MapReduceChain from the LangChain framework is used to generate and combine short summaries of similarly matched products. The combined summaries are then used to build a high-quality prompt for an input to the LLM model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "28540328-5df3-4807-8d37-d8f5780b3048",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "1. Alphabet Learning Toy: This toy is priced at $30 and teaches letters and numbers. It is the most relevant toy to the question, as it directly addresses the need for a toy that teaches both numbers and letters to kids. \n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display, Markdown\n",
+    "from langchain_core.documents.base import Document\n",
+    "from langchain.chains.summarize import load_summarize_chain\n",
+    "from langchain_google_vertexai import VertexAI\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "\n",
+    "# Mock matches data\n",
+    "matches = [\n",
+    "    {\"product_name\": \"Alphabet Learning Toy\", \"price\": 30, \"features\": \"Teaches letters and numbers.\"},\n",
+    "    {\"product_name\": \"Number Puzzle\", \"price\": 20, \"features\": \"Interactive puzzle for number learning.\"},\n",
+    "]\n",
+    "\n",
+    "# LangChain setup\n",
+    "llm = VertexAI(model_name=\"gemini-pro\")\n",
+    "\n",
+    "map_prompt_template = \"\"\"\n",
+    "            You will be given a detailed description of a toy product.\n",
+    "            This description is enclosed in triple backticks (```).\n",
+    "            Using this description only, extract the name of the toy,\n",
+    "            the price of the toy and its features.\n",
+    "\n",
+    "            ```{text}```\n",
+    "            SUMMARY:\n",
+    "            \"\"\"\n",
+    "map_prompt = PromptTemplate(template=map_prompt_template, input_variables=[\"text\"])\n",
+    "\n",
+    "combine_prompt_template = \"\"\"\n",
+    "                You will be given a detailed description of different toy products\n",
+    "                enclosed in triple backticks (```) and a question enclosed in\n",
+    "                double backticks(``).\n",
+    "                Select one toy that is most relevant to answer the question.\n",
+    "                Using that selected toy description, answer the following\n",
+    "                question in as much detail as possible.\n",
+    "                You should only use the information in the description.\n",
+    "                Your answer should include the name of the toy, the price of the toy\n",
+    "                and its features. Your answer should be less than 200 words.\n",
+    "                Your answer should be in Markdown in a numbered list format.\n",
+    "\n",
+    "                Description:\n",
+    "                ```{text}```\n",
+    "\n",
+    "                Question:\n",
+    "                ``{user_query}``\n",
+    "\n",
+    "                Answer:\n",
+    "                \"\"\"\n",
+    "combine_prompt = PromptTemplate(\n",
+    "    template=combine_prompt_template, input_variables=[\"text\", \"user_query\"]\n",
+    ")\n",
+    "\n",
+    "# Convert matches to LangChain documents\n",
+    "docs = [\n",
+    "    Document(page_content=f\"Name: {match['product_name']}, Price: {match['price']}, Features: {match['features']}\")\n",
+    "    for match in matches\n",
+    "]\n",
+    "\n",
+    "# Load and invoke the chain\n",
+    "chain = load_summarize_chain(\n",
+    "    llm, chain_type=\"map_reduce\", map_prompt=map_prompt, combine_prompt=combine_prompt\n",
+    ")\n",
+    "\n",
+    "# User query\n",
+    "user_query = \"Do you have a toy set that teaches numbers and letters to kids?\"\n",
+    "\n",
+    "# Invoke the chain\n",
+    "output = chain.invoke({\n",
+    "    \"input_documents\": docs,\n",
+    "    \"user_query\": user_query,\n",
+    "})\n",
+    "\n",
+    "# Extract and display the output\n",
+    "answer = output.get('output_text', ' ')\n",
+    "display(Markdown(answer))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4ac473c-9747-42bc-9b8f-06a43589985e",
+   "metadata": {},
+   "source": [
+    "## Use case 2: Adding AI-powered creative content generation\n",
+    "Use knowledge from the existing dataset to generate new AI-powered content from an initial prompt.\n",
+    "\n",
+    "1. A third-party seller on the retail platform wants to use the AI-powered content generation to create a detailed description of their new bicycle product."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "8490c211-1dc3-4666-a08c-1275f8fd2e4f",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Please fill in these values.\n",
+    "creative_prompt = \"A bicycle with brand name 'Roadstar bike' for kids that comes with training wheels and helmet.\" "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a5362e0-bf87-433f-b988-e7c17fd02aa8",
+   "metadata": {},
+   "source": [
+    "Leverage the pgvector similarity search operator to find an existing product description that closely matches the new product specified in the initial prompt."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "57fcf72b-95d3-4ee8-a907-4bd6bb19ab61",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matches found: ['Turn any small bicycle into an instrument for learning to ride with the Schwinn 12\"-20\" Training Wheels. They feature a slotted design to fit 12\" to 20\" bikes. The training wheels are easy to assemble, install and remove, so that when your little one is able to ride without assistance, you can take them off. These bicycle training wheels include steel brackets and rubber tires that can stand up to heavy use. Training Wheels, Fits 12 inches - 20 inches bicycles. Est. 1895. Durable Construction: Steel brackets stand up to heavy use. Customizable: Two sets of wheel decals included. Features: Fits Most Childrens Bicycles: Intended for 12 inch - 20 inch bicycles. Steel Brackets: Offer increased durability. Includes two sets of wheel decals: Learn how to ride in style - see images below. Easy to Adjust: Slotted design for size adjustment. Includes: One pair of training wheels, four decals, installation instructions, and all mounting hardware. Tools required: Adjustable wrench. www.schwinnbikes.com. Follow ride Schwinn on: Twitter. Facebook. Made in China. Training Wheels,Fits 12 inches - 20 inches bicycles. Est. 1895. Durable Construction: Steel brackets stand up to heavy use. Customizable: Two sets of wheel decals included. Features: Fits Most Childrens Bicycles: Intended for 12 inch - 20 inch bicycles. Steel Brackets: Offer increased durability. Includes two sets of wheel decals: Learn how to ride in style - see images below. Easy to Adjust: Slotted design for size adjustment. Includes: One pair of training wheels, four decals, installation instructions, and all mounting hardware. Tools required: Adjustable wrench. www.schwinnbikes.com. Follow ride Schwinn on: Twitter. Facebook. Made in China.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "from pgvector.psycopg2 import register_vector\n",
+    "\n",
+    "def main():\n",
+    "    try:\n",
+    "        # AlloyDB cluster connection details\n",
+    "        cluster_ip_address = \"10.12.0.2\"\n",
+    "        database_user = \"postgres\"\n",
+    "        database_password = \"postgres\"\n",
+    "\n",
+    "        # Connect to AlloyDB cluster\n",
+    "        conn = psycopg2.connect(\n",
+    "            host=cluster_ip_address,\n",
+    "            user=database_user,\n",
+    "            password=database_password\n",
+    "        )\n",
+    "\n",
+    "        # Register the vector type\n",
+    "        register_vector(conn)\n",
+    "\n",
+    "        # Get the query embedding\n",
+    "        qe = embeddings_service.embed_query(creative_prompt)\n",
+    "\n",
+    "        # Check if qe is a valid embedding\n",
+    "        if not qe:\n",
+    "            print(\"Error: The query embedding is empty.\")\n",
+    "            return\n",
+    "\n",
+    "        # Set similarity threshold\n",
+    "        similarity_threshold = 0.5\n",
+    "        matches = []\n",
+    "\n",
+    "        # Perform the similarity search and filtering\n",
+    "        cur = conn.cursor()\n",
+    "        cur.execute(\n",
+    "            \"\"\"\n",
+    "            WITH vector_matches AS (\n",
+    "                SELECT product_id, embedding <=> %s::vector AS distance\n",
+    "                FROM product_embeddings\n",
+    "                WHERE embedding <=> %s::vector < %s\n",
+    "                ORDER BY distance ASC\n",
+    "                LIMIT 1\n",
+    "            )\n",
+    "            SELECT description FROM products\n",
+    "            WHERE product_id IN (SELECT product_id FROM vector_matches)\n",
+    "            \"\"\",\n",
+    "            (qe, qe, similarity_threshold)\n",
+    "        )\n",
+    "\n",
+    "        results = cur.fetchall()\n",
+    "\n",
+    "        # Process the results\n",
+    "        for r in results:\n",
+    "            matches.append(r[0])\n",
+    "\n",
+    "        if not matches:\n",
+    "            print(\"No matches found.\")\n",
+    "        else:\n",
+    "            print(\"Matches found:\", matches)\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error during database operations: {e}\")\n",
+    "    finally:\n",
+    "        # Close the connection if it was established\n",
+    "        if conn:\n",
+    "            conn.close()\n",
+    "\n",
+    "# Call the main function\n",
+    "main()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ae37106-212c-40b1-9268-2f5ef76c5ce8",
+   "metadata": {},
+   "source": [
+    "3. Use the existing matched product description as the prompt context to generate new creative output from the LLM.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ba0d9061-6ac6-4db1-9372-e5d1f1bdec37",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "## The Multi-Terrain Explorer\n",
+       "\n",
+       "This toy is a perfect companion for both indoor and outdoor adventures, designed for curious kids aged 4 to 8. \n",
+       "\n",
+       "**Features:**\n",
+       "\n",
+       "* **Versatile Design:** \n",
+       "    * **Indoor Mode:** Transforms into a sleek, futuristic car with smooth wheels for gliding across floors.\n",
+       "    * **Outdoor Mode:** Converts into a rugged all-terrain vehicle with chunky tires for tackling rough terrain like grass, dirt, and gravel.\n",
+       "* **Interactive Play:**\n",
+       "    * **Lights and Sounds:** Features realistic engine noises and headlights that illuminate the path ahead.\n",
+       "    * **Hidden Compartments:** Contains secret compartments to store treasures discovered on explorations.\n",
+       "* **Imaginative Fun:**\n",
+       "    * **Removable Accessories:** Comes with a detachable trailer for carrying cargo, a shovel for digging, and a magnifying glass for observing nature.\n",
+       "    * **Changeable Stickers:** Includes a set of stickers for customizing the vehicle with different designs and themes.\n",
+       "* **Durable Construction:** Made from high-quality, child-safe materials to withstand bumps and tumbles during playtime.\n",
+       "\n",
+       "**Benefits:**\n",
+       "\n",
+       "* Encourages both indoor and outdoor play, promoting physical activity and exploration.\n",
+       "* Stimulates imagination and creativity through interactive features and open-ended play.\n",
+       "* Develops problem-solving skills and fine motor skills through manipulating the various components.\n",
+       "* Provides endless hours of fun and learning for young adventurers.\n",
+       "\n",
+       "**Overall, the Multi-Terrain Explorer is the perfect toy for kids who love to explore the world around them, both inside and out.**"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display, Markdown\n",
+    "from langchain_google_vertexai import VertexAI\n",
+    "from langchain_core.prompts import PromptTemplate\n",
+    "from langchain_core.runnables import RunnableSequence\n",
+    "\n",
+    "# Define the template\n",
+    "template = \"\"\"\n",
+    "            You are given descriptions about some similar kind of toys in the context.\n",
+    "            This context is enclosed in triple backticks (```).\n",
+    "            Combine these descriptions and adapt them to match the specifications in\n",
+    "            the initial prompt. All the information from the initial prompt must\n",
+    "            be included. You are allowed to be as creative as possible,\n",
+    "            and describe the new toy in as much detail. Your answer should be\n",
+    "            in markdown in lists and less than 200 words.\n",
+    "\n",
+    "            Context:\n",
+    "            ```{context}```\n",
+    "\n",
+    "            Initial Prompt:\n",
+    "            {creative_prompt}\n",
+    "\n",
+    "            Answer:\n",
+    "        \"\"\"\n",
+    "\n",
+    "prompt = PromptTemplate(\n",
+    "    template=template, input_variables=[\"context\", \"creative_prompt\"]\n",
+    ")\n",
+    "\n",
+    "# Define the LLM\n",
+    "llm = VertexAI(model_name=\"gemini-pro\", temperature=0.7)\n",
+    "\n",
+    "# Example `matches` list\n",
+    "matches = [\n",
+    "    {\"description\": \"This is a toy description 1.\"},\n",
+    "    {\"description\": \"This is a toy description 2.\"},\n",
+    "    {},  # Missing `description`\n",
+    "    \"Invalid item\"  # Not a dictionary\n",
+    "]\n",
+    "\n",
+    "# Construct the context by extracting valid descriptions\n",
+    "context = \"\\n\".join(\n",
+    "    item[\"description\"] for item in matches if isinstance(item, dict) and \"description\" in item\n",
+    ")\n",
+    "\n",
+    "# Define the creative prompt\n",
+    "creative_prompt = \"Describe a toy that is suitable for both indoor and outdoor play.\"\n",
+    "\n",
+    "# Use RunnableSequence for chaining\n",
+    "llm_chain = RunnableSequence(prompt | llm)\n",
+    "\n",
+    "# Invoke the chain\n",
+    "answer = llm_chain.invoke({\n",
+    "    \"context\": context,\n",
+    "    \"creative_prompt\": creative_prompt,\n",
+    "})\n",
+    "\n",
+    "# Display the answer in Markdown format\n",
+    "display(Markdown(answer))\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
