--- a/Custom Embeddings with Vertex AI Agent Builder.ipynb
+++ b/Custom Embeddings with Vertex AI Agent Builder.ipynb
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "b17d5e0d-df50-4452-a74d-ddf920e2ce1e",
    "metadata": {
     "tags": []
@@ -1594,7 +1594,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Summary: No results could be found. Try rephrasing the search query.\n"
+      "Summary: To create an array in Java, you can use the `new` keyword followed by the data type of the array and the size of the array in square brackets. For example, to create an array of integers with a size of 5, you would use the following code: `int myArray = new int;`. You can also initialize an array with values when you create it. [1] For example, to create an array of integers with the values 1, 2, 3, 4, and 5, you would use the following code: `int myArray = {1, 2, 3, 4, 5};`. Java can determine the size of the array implicitly based on the number of values you provide. [1] \n",
+      "\n"
      ]
     }
    ],
