--- a/Getting Started with the Vertex AI Gemini API with cURL.ipynb
+++ b/Getting Started with the Vertex AI Gemini API with cURL.ipynb
@@ -1390,9 +1390,120 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a5c39b8-26e7-4681-ab87-b1845c3fb935",
+   "metadata": {},
+   "source": [
+    "## Generate text from a video file\n",
+    "Specify the Cloud Storage URI of the video to include in the prompt. The bucket that stores the file must be in the same Google Cloud project that's sending the request. You must also specify the mime_type field. The supported MIME types for video include video/mp4."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f3aac7cc-dc2e-4ddc-b4ce-8c88ba9e5cf2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "100  2025    0  1511  100   514    310    105  0:00:04  0:00:04 --:--:--   416\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "  \"candidates\": [\n",
+      "    {\n",
+      "      \"content\": {\n",
+      "        \"role\": \"model\",\n",
+      "        \"parts\": [\n",
+      "          {\n",
+      "            \"text\": \"{\\\"profession\\\": \\\"Photographer\\\", \\\"phone features\\\": [\\\"Video Boost\\\", \\\"Night Sight\\\"], \\\"city\\\": \\\"Tokyo\\\"}\"\n",
+      "          }\n",
+      "        ]\n",
+      "      },\n",
+      "      \"finishReason\": \"STOP\",\n",
+      "      \"safetyRatings\": [\n",
+      "        {\n",
+      "          \"category\": \"HARM_CATEGORY_HATE_SPEECH\",\n",
+      "          \"probability\": \"NEGLIGIBLE\",\n",
+      "          \"probabilityScore\": 0.103515625,\n",
+      "          \"severity\": \"HARM_SEVERITY_NEGLIGIBLE\",\n",
+      "          \"severityScore\": 0.06738281\n",
+      "        },\n",
+      "        {\n",
+      "          \"category\": \"HARM_CATEGORY_DANGEROUS_CONTENT\",\n",
+      "          \"probability\": \"NEGLIGIBLE\",\n",
+      "          \"probabilityScore\": 0.07373047,\n",
+      "          \"severity\": \"HARM_SEVERITY_LOW\",\n",
+      "          \"severityScore\": 0.20800781\n",
+      "        },\n",
+      "        {\n",
+      "          \"category\": \"HARM_CATEGORY_HARASSMENT\",\n",
+      "          \"probability\": \"NEGLIGIBLE\",\n",
+      "          \"probabilityScore\": 0.103515625,\n",
+      "          \"severity\": \"HARM_SEVERITY_NEGLIGIBLE\",\n",
+      "          \"severityScore\": 0.10839844\n",
+      "        },\n",
+      "        {\n",
+      "          \"category\": \"HARM_CATEGORY_SEXUALLY_EXPLICIT\",\n",
+      "          \"probability\": \"NEGLIGIBLE\",\n",
+      "          \"probabilityScore\": 0.15136719,\n",
+      "          \"severity\": \"HARM_SEVERITY_NEGLIGIBLE\",\n",
+      "          \"severityScore\": 0.12890625\n",
+      "        }\n",
+      "      ],\n",
+      "      \"avgLogprobs\": -0.14419011274973551\n",
+      "    }\n",
+      "  ],\n",
+      "  \"usageMetadata\": {\n",
+      "    \"promptTokenCount\": 16855,\n",
+      "    \"candidatesTokenCount\": 24,\n",
+      "    \"totalTokenCount\": 16879\n",
+      "  },\n",
+      "  \"modelVersion\": \"gemini-1.5-pro-001\"\n",
+      "}\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "curl -X POST \\\n",
+    "  -H \"Authorization: Bearer $(gcloud auth print-access-token)\" \\\n",
+    "  -H \"Content-Type: application/json\" \\\n",
+    "  https://${API_ENDPOINT}/v1/projects/${PROJECT_ID}/locations/${LOCATION}/publishers/google/models/${MODEL_ID}:generateContent \\\n",
+    "  -d \\\n",
+    "'{\n",
+    "    \"contents\": {\n",
+    "      \"role\": \"USER\",\n",
+    "      \"parts\": [\n",
+    "        {\n",
+    "          \"text\": \"Answer the following questions using the video only. What is the profession of the main person? What are the main features of the phone highlighted?Which city was this recorded in?Provide the answer JSON.\"\n",
+    "        },\n",
+    "        {\n",
+    "          \"file_data\": {\n",
+    "            \"mime_type\": \"video/mp4\",\n",
+    "            \"file_uri\": \"gs://github-repo/img/gemini/multimodality_usecases_overview/pixel8.mp4\"\n",
+    "          }\n",
+    "        }\n",
+    "      ]\n",
+    "    }\n",
+    "  }'"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "787afc07-b02d-4458-acb6-b498d7f6f34b",
+   "id": "f80d2974-931c-4275-a4aa-4e7c965e940d",
    "metadata": {},
    "outputs": [],
    "source": []
