--- a/Introduction to Function Calling with Gemini.ipynb
+++ b/Introduction to Function Calling with Gemini.ipynb
@@ -872,11 +872,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "b6f75321-b16b-46f3-8147-81f708ac3892",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "text: \"Your order has been placed. Your order number is 12345. The estimated arrival date is in 2 days. Your payment status is paid.\\n\""
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = chat.send_message(\n",
+    "    Part.from_function_response(\n",
+    "        name=\"place_order\",\n",
+    "        response={\n",
+    "            \"content\":  api_response,\n",
+    "        }\n",
+    "    ),\n",
+    ")\n",
+    "response.candidates[0].content.parts[0]"
+   ]
   }
  ],
  "metadata": {
